starting to feel like progress

--- a/background/background.tex
+++ b/background/background.tex
@@ -207,6 +207,8 @@ This is potentially due to the seemingly ad-hoc composition of unitary operators
 unconstrained optimisation of parameters while maintaining the desired properties of the
 recurrent matrix.
 
+\hl{Strongly Typed}
+
 Another line of enquiry which can help with long time-dependencies focuses on the initialisation
 of the network. IRNNs \autocite{Le2015}, which simply initialise the recurrent weights matrix to the
  identity (presaged by the nearly diagonal initialisation in \autocite{Mikolov2015}), perform
@@ -239,5 +241,3 @@ issue.
 
 \subsection{Tensors in Neural Networks}
 Including gated networks, MRNN and so on.
-
-\printbibliography
