--- a/exps/exps.tex
+++ b/exps/exps.tex
@@ -1,4 +1,6 @@
-\chapter{RNN Experiments (better title plz)}\label{C:exps}
+% !TEX root = ../proj_report_outline.tex
+
+\chapter{Evaluation of architectures}\label{C:exps}
 \section{Synthetic Tasks}
 Pathological, exercise specific features of the architecture.
 \subsection{Addition}
