add some pics, may keep them

--- a/proj_report_outline.tex
+++ b/proj_report_outline.tex
@@ -124,6 +124,12 @@
 \usepackage{hyperref}
 \usepackage{soul}
 
+\usepackage{tikz}
+\tikzstyle{every node}=[circle, draw, fill=black,
+		   inner sep=0pt, minimum width=4pt]
+
+\usepackage{subcaption}
+
 
 % You should specifiy your supervisor here with
 \supervisors{Marcus Frean and David Balduzzi}
